--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,20 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <style>
       
+  .swiper:hover .swiper-button-next,
+    .swiper:hover .swiper-button-prev {
+        display: block !important;
+    }
 
+    .swiper-button-next,
+    .swiper-button-prev {
+        display: none !important;
+    }
+
+    .product-image {
+        max-height: 160px;
+        object-fit: contain;
+    }
   </style>
   {% block extra_css %}
   {% endblock %}
